--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,5 @@
             </intent-filter>
         </activity>
     </application>
-
+<user-permission android:name="android.permission.INTERNET"/>
 </manifest>
