--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
       <activity android:name=".SubActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ListViewActivity" android:screenOrientation="portrait"/>
    </application>
 
 
