--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,11 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-      <activity android:name=".SubActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ListViewActivity" android:screenOrientation="portrait"/>
-   </application>
-
-
+        <activity android:name=".SubActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ListViewActivity" />
+    </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
